feat(service): Método de busca de livros por nome implementado.